# 7e0bhttpd

./: CMakeLists.txt  plot_parser.sh
src/: CMakeLists.txt  http.h  http.rl  main.c  parse_request.c
test/: curl_request.http  firefox_request.http  simple_request.http
